// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp json snapshot 1`] = `
Object {
  "default": undefined,
  "deprecated": false,
  "deprecationReason": undefined,
  "docs": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  "id": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.RepositoryCatalogData",
  "name": "RepositoryCatalogData",
  "optional": true,
  "type": Object {
    "name": "object",
  },
}
`;

exports[`csharp markdown snapshot 1`] = `
" \`RepositoryCatalogData\`<sup>Optional</sup> <a name=\\"Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps.property.RepositoryCatalogData\\"></a>

\`\`\`csharp
public object RepositoryCatalogData { get; set; }
\`\`\`

- *Type:* \`object\`

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---
"
`;

exports[`java json snapshot 1`] = `
Object {
  "default": undefined,
  "deprecated": false,
  "deprecationReason": undefined,
  "docs": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  "id": "software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.repositoryCatalogData",
  "name": "repositoryCatalogData",
  "optional": true,
  "type": Object {
    "name": "java.lang.Object",
  },
}
`;

exports[`java markdown snapshot 1`] = `
" \`repositoryCatalogData\`<sup>Optional</sup> <a name=\\"software.amazon.awscdk.services.ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

\`\`\`java
public java.lang.Object getRepositoryCatalogData();
\`\`\`

- *Type:* \`java.lang.Object\`

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---
"
`;

exports[`python json snapshot 1`] = `
Object {
  "default": undefined,
  "deprecated": false,
  "deprecationReason": undefined,
  "docs": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  "id": "aws_cdk.aws_ecr.CfnPublicRepositoryProps.repository_catalog_data",
  "name": "repository_catalog_data",
  "optional": true,
  "type": Object {
    "name": "typing.Any",
  },
}
`;

exports[`python markdown snapshot 1`] = `
" \`repository_catalog_data\`<sup>Optional</sup> <a name=\\"aws_cdk.aws_ecr.CfnPublicRepositoryProps.property.repository_catalog_data\\"></a>

\`\`\`python
repository_catalog_data: typing.Any
\`\`\`

- *Type:* \`typing.Any\`

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---
"
`;

exports[`typescript json snapshot 1`] = `
Object {
  "default": undefined,
  "deprecated": false,
  "deprecationReason": undefined,
  "docs": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps.repositoryCatalogData",
  "name": "repositoryCatalogData",
  "optional": true,
  "type": Object {
    "name": "any",
  },
}
`;

exports[`typescript markdown snapshot 1`] = `
" \`repositoryCatalogData\`<sup>Optional</sup> <a name=\\"@aws-cdk/aws-ecr.CfnPublicRepositoryProps.property.repositoryCatalogData\\"></a>

\`\`\`typescript
public readonly repositoryCatalogData: any;
\`\`\`

- *Type:* \`any\`

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

> [http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata](http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata)

---
"
`;
